--- a/public/Site.html
+++ b/public/Site.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
-    <div id="header">
-        <div class="Logo">
-            <svg alt="Logomarca do Nubank" width="48" height="36" viewBox="0 0 48 36" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill="#8A05BE" fill-rule="evenodd" clip-rule="evenodd" d="M46.372 5.69458H41.9424C41.0522
+    <div id="content">
+        <div id="header">
+            <div class="Logo">
+                <svg alt="Logomarca do Nubank" width="48" height="36" viewBox="0 0 48 36" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill="#8A05BE" fill-rule="evenodd" clip-rule="evenodd" d="M46.372 5.69458H41.9424C41.0522
                 5.69458 40.3219 6.41986 40.3143 7.31081H40.3159L40.3123
                 7.4194L40.3143 7.50324L40.2945 7.77497H40.3148C40.3169 10.414 40.3153 23.5863 40.3143
                 28.8617H36.5418C34.4639 28.8617 32.7739 27.1804 32.7739 25.1131V7.31384C32.7739 6.42087
@@ -28,8 +29,8 @@
                 23.4661C26.505 20.3447 26.5009 15.2783 26.502 7.31384C26.502 7.19919 26.5964 7.10525 26.7122
                 7.10525H31.1454C31.2611 7.10525 31.3556 7.19919 31.3556 7.31384V25.1131C31.3556 27.9582 33.6819 
                 30.2724 36.5418 30.2724H40.3143L40.3138 31.9821C40.3138 34.3352 37.693 34.5893 36.5662 34.5893Z">
-                </path>
-                <path fill="#8A05BE" fill-rule="evenodd" clip-rule="evenodd" d="M22.9092 9.56052C22.9092 3.63703 
+                    </path>
+                    <path fill="#8A05BE" fill-rule="evenodd" clip-rule="evenodd" d="M22.9092 9.56052C22.9092 3.63703 
                 16.2255 0 11.4338 0C8.2473 0 6.26787 1.5435 6.26787 4.02846L6.26736
                 5.72752H4.8262C2.52583 5.72752 0 8.24935 0 10.5459V28.6856C0 29.5786 0.730227 30.3049 1.62803
                 30.3049H6.05764C6.94782 30.3049 7.67805 29.5806 7.68567 28.6871H7.68414L7.6877 28.581L7.68567
@@ -43,9 +44,26 @@
                 28.6876C6.26685 28.8023 6.1724 28.8947 6.05764 28.8947H1.62803C1.51225 28.8947 1.41831 28.8013 
                 1.41831 28.6856V10.5459C1.41831 9.01756 3.29719 7.13819 4.8262 7.13819H6.26736C6.26634 18.3013 
                 6.26533 28.5826 6.26787 28.6876Z">
-                </path>
-            </svg>
+                    </path>
+                </svg>
+            </div>
         </div>
+
+
+
+
+
+        <div>
+            <!-- Pedro vai começar aqui  -->
+
+            <h1>Hello World</h1>
+
+        </div>
+
+
+
+
+
     </div>
 </body>
 
