--- a/public/Site.html
+++ b/public/Site.html
@@ -89,12 +89,17 @@
 
             </div>
         </div>
-        <div class="quadradopreto">
-            <div id="quadradobranco">
+        <div class="quadrados">
+            <div id=preto>
+                <h5>Conta digital do Nubank</h5>
 
             </div>
+            <div id="branco"></div>
+
 
         </div>
+
+    </div>
 
     </div>
     </div>
