--- a/public/Site.html
+++ b/public/Site.html
@@ -106,3 +106,10 @@
 </body>
 
 </html>
+<!-- 
+git add .   
+git commit -m "nome desejado"
+git push origin master -->
+
+<!-- git pull origin master
+obs: se der erro git stash e depois git pull origin master -->
